fix spacing

--- a/frontend/src/components/ListingShow/ListingShow.css
+++ b/frontend/src/components/ListingShow/ListingShow.css
@@ -1,5 +1,5 @@
 .listing-template {
-    top: 70px;
+    margin-top: 100px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -11,7 +11,6 @@
     display: flex;
     width: 100%;
     justify-content: flex-start;
-    align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
 }
@@ -66,7 +65,7 @@
 .top-photo {
     display: flex;
     height: 50%;
-    width: 50%;
+    width: calc(50% - 5px);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -75,7 +74,7 @@
 
 .bottom-photo {
     height: calc(50% - 5px);
-    width: 50%;
+    width: calc(50% - 5px);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
